# swagger.json
@@ -13,7 +13,7 @@
   "paths": {
     "/contacts/": {
       "get": {
-        "description": "Get all contacts",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -24,7 +24,33 @@
         }
       },
       "post": {
-        "description": "Create a new contact",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "favoriteColor": {
+                  "example": "any"
+                },
+                "birthday": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -37,7 +63,7 @@
     },
     "/contacts/{id}": {
       "get": {
-        "description": "Get a contact by id",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -56,13 +82,37 @@
         }
       },
       "put": {
-        "description": "Update a contact info by id",
+        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "favoriteColor": {
+                  "example": "any"
+                },
+                "birthday": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -75,7 +125,7 @@
         }
       },
       "delete": {
-        "description": "Delete a contact by id",
+        "description": "",
         "parameters": [
           {
             "name": "id",
